add data request and news section js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GEMA</title>
     <link rel="stylesheet" href="./styles/index.css">
+    <script src="./scripts/index.js"></script>
 </head>
 <body>
     <div id="home">
@@ -45,15 +46,15 @@
         <p>Veja o que andam falando do GEMA!</p>
         <div class="news-cards">
             <div class="news-card">
-                <img src="./images/FotoNoticia.png" alt="Group photo">
+                <img src="" alt="Group photo">
                 <p>GEMA é Classificado para o Mundial de 2024</p>
             </div>
             <div class="news-card">
-                <img src="./images/FotoNoticia.png" alt="Group photo">
+                <img src="" alt="Group photo">
                 <p>GEMA é Classificado para o Mundial de 2024</p>
             </div>
             <div class="news-card">
-                <img src="./images/FotoNoticia.png" alt="Group photo">
+                <img src="" alt="Group photo">
                 <p>GEMA é Classificado para o Mundial de 2024</p>
             </div>
         </div>
