update page links

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             </a>
             <div class="nav-links">
                 <a href="#about-us">Conhecer</a>
-                <a href="#">Telegram</a>
-                <a href="#news">Conteúdos</a>
+                <a href="https://bit.ly/gemaavisos" target=”_blank”>Telegram</a>
+                <a href="https://www.youtube.com/@GEMAICMC/playlists" target=”_blank”>Conteúdos</a>
             </div>
         </nav>
         <div class="start">
@@ -126,14 +126,14 @@
         <h2>Embarque Conosco</h2>
         <p>Fique conectado com o Gema!</p>
         <div class="socials">
-            <a href="#"><img src="./images/Youtube.svg" alt="Youtube icon"></a>
-            <a href="#"><img src="./images/Instagram.svg" alt="Instagram icon"></a>
-            <a href="#"><img src="./images/Telegram.svg" alt="Telegram icon"></a>
+            <a href="https://www.youtube.com/@GEMAICMC" target=”_blank”><img src="./images/Youtube.svg" alt="Youtube icon"></a>
+            <a href="https://www.instagram.com/gema.icmc" target=”_blank”><img src="./images/Instagram.svg" alt="Instagram icon"></a>
+            <a href="https://bit.ly/gemaavisos" target=”_blank”><img src="./images/Telegram.svg" alt="Telegram icon"></a>
         </div>
     </div>
     <footer>
         <p>Gema - ICMC USP 2024</p>
-        <p>Desenvolvido pelo <a href="#">Codelab</a></p>
+        <p>Desenvolvido pelo <a href="https://codelab-icmc.netlify.app" target=”_blank”>Codelab</a></p>
     </footer>
     <div id="modal">
         <div id="content">
